[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/ui/buildings/craftingStation/craftingStation.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buildings/craftingStation/fill.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/slider2.gdshader" type="Shader" id=3]
[ext_resource path="res://assets/ui/buildings/craftingStation/Working_Progress_Build_.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/craftingItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/objects/buildings/craftingStationUI.gd" type="Script" id=6]
[ext_resource path="res://data/recipies/wall.tres" type="Resource" id=7]
[ext_resource path="res://data/recipies/floor.tres" type="Resource" id=8]
[ext_resource path="res://scenes/ui/require.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui/slider.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/sliderFill.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/grabber.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/m3x6.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://scenes/ui/inventory/buildingSlot.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/ui/buildings/craftingStation/additionalSlot.png" type="Texture" id=15]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 1, 1, 99, 97 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 1, 109, 76, 15 )

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/persent = 0.0

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 79, 109, 15, 15 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 109, 15, 15 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="StyleBoxTexture" id=21]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 64, 10 )

[sub_resource type="StyleBoxTexture" id=22]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 64, 10 )

[sub_resource type="DynamicFont" id=23]
size = 32
use_mipmaps = true
font_data = ExtResource( 13 )

[node name="ui" type="CanvasLayer"]
visible = false

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.509804 )
margin_right = 320.0
margin_bottom = 179.0
mouse_filter = 2

[node name="addictionalSlot" type="TextureRect" parent="."]
margin_left = 46.0
margin_top = 34.0
margin_right = 141.0
margin_bottom = 113.0
mouse_filter = 2
texture = ExtResource( 15 )
expand = true
stretch_mode = 3

[node name="buildingSlot" parent="addictionalSlot" instance=ExtResource( 14 )]
margin_left = 39.0
margin_top = 51.0
margin_right = 56.648
margin_bottom = 64.016
debug = true

[node name="craftingStationUI" type="TextureRect" parent="."]
margin_left = 110.0
margin_top = 22.0
margin_right = 209.0
margin_bottom = 119.0
mouse_filter = 2
texture = SubResource( 1 )
script = ExtResource( 6 )

[node name="slider" type="TextureRect" parent="craftingStationUI"]
margin_top = 99.0
margin_right = 76.0
margin_bottom = 114.0
texture = SubResource( 2 )

[node name="fill" type="TextureRect" parent="craftingStationUI/slider"]
material = SubResource( 3 )
margin_left = 7.0
margin_top = 6.0
margin_right = 69.0
margin_bottom = 9.0
texture = ExtResource( 2 )

[node name="craft" type="TextureButton" parent="craftingStationUI"]
margin_left = 78.0
margin_top = 99.0
margin_right = 93.0
margin_bottom = 114.0
texture_normal = SubResource( 4 )
texture_hover = SubResource( 5 )

[node name="hammer" type="AnimatedSprite" parent="craftingStationUI"]
visible = false
position = Vector2( 38, 47 )
frames = SubResource( 18 )

[node name="items" type="GridContainer" parent="craftingStationUI"]
margin_left = 6.0
margin_top = 15.0
margin_right = 71.0
margin_bottom = 79.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 3

[node name="craftingItem" parent="craftingStationUI/items" instance=ExtResource( 5 )]
recipe = ExtResource( 7 )

[node name="craftingItem2" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_left = 22.0
margin_right = 42.0
recipe = ExtResource( 8 )

[node name="craftingItem3" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_left = 44.0
margin_right = 64.0
disabled = true

[node name="craftingItem4" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_top = 22.0
margin_bottom = 42.0
disabled = true

[node name="craftingItem5" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_left = 22.0
margin_top = 22.0
margin_right = 42.0
margin_bottom = 42.0
disabled = true

[node name="craftingItem6" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_left = 44.0
margin_top = 22.0
margin_right = 64.0
margin_bottom = 42.0
disabled = true

[node name="craftingItem7" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_top = 44.0
margin_bottom = 64.0
disabled = true

[node name="craftingItem8" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_left = 22.0
margin_top = 44.0
margin_right = 42.0
margin_bottom = 64.0
disabled = true

[node name="craftingItem9" parent="craftingStationUI/items" instance=ExtResource( 5 )]
margin_left = 44.0
margin_top = 44.0
margin_right = 64.0
margin_bottom = 64.0
disabled = true

[node name="require" type="GridContainer" parent="craftingStationUI"]
visible = false
margin_left = 6.0
margin_top = 15.0
margin_right = 71.0
margin_bottom = 79.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 3

[node name="require" parent="craftingStationUI/require" instance=ExtResource( 9 )]

[node name="require2" parent="craftingStationUI/require" instance=ExtResource( 9 )]
margin_left = 22.0
margin_right = 42.0

[node name="require3" parent="craftingStationUI/require" instance=ExtResource( 9 )]
margin_left = 44.0
margin_right = 64.0

[node name="require4" parent="craftingStationUI/require" instance=ExtResource( 9 )]
margin_top = 22.0
margin_bottom = 42.0

[node name="require5" parent="craftingStationUI/require" instance=ExtResource( 9 )]
margin_left = 22.0
margin_top = 22.0
margin_right = 42.0
margin_bottom = 42.0

[node name="require6" parent="craftingStationUI/require" instance=ExtResource( 9 )]
margin_left = 44.0
margin_top = 22.0
margin_right = 64.0
margin_bottom = 42.0

[node name="processTween" type="Tween" parent="craftingStationUI"]

[node name="Timer" type="Timer" parent="craftingStationUI"]
one_shot = true

[node name="amountSlider" type="HSlider" parent="craftingStationUI"]
visible = false
margin_left = 6.0
margin_top = 78.0
margin_right = 70.0
margin_bottom = 94.0
custom_icons/tick = ExtResource( 12 )
custom_icons/grabber_disabled = ExtResource( 12 )
custom_icons/grabber_highlight = ExtResource( 12 )
custom_icons/grabber = ExtResource( 12 )
custom_styles/slider = SubResource( 21 )
custom_styles/grabber_area_highlight = SubResource( 22 )
custom_styles/grabber_area = SubResource( 22 )
min_value = 1.0
max_value = 2.0
value = 1.0
scrollable = false

[node name="TextureRect" type="TextureRect" parent="craftingStationUI/amountSlider"]
modulate = Color( 0.152941, 0.152941, 0.211765, 1 )
margin_top = 3.0
margin_right = 1.0
margin_bottom = 13.0
texture = ExtResource( 11 )
expand = true

[node name="number" type="Label" parent="craftingStationUI/amountSlider"]
margin_top = -20.0
margin_right = 64.0
margin_bottom = 6.0
custom_fonts/font = SubResource( 23 )
align = 1
valign = 1

[connection signal="pressed" from="craftingStationUI/craft" to="craftingStationUI" method="_on_craft_pressed"]
[connection signal="animation_finished" from="craftingStationUI/hammer" to="craftingStationUI" method="_on_hammer_animation_finished"]
[connection signal="timeout" from="craftingStationUI/Timer" to="craftingStationUI" method="_on_Timer_timeout"]
[connection signal="value_changed" from="craftingStationUI/amountSlider" to="craftingStationUI" method="_on_amountSlider_value_changed"]
